--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,25 @@
         }
     ],
     "require": {
-        "php": "^7.2 || ^8.0",
-        "symfony/http-kernel": "^4.4 || ^5.1"
+        "php": "^7.2",
+        "contao/core-bundle": "4.8.*",
+        "symfony/framework-bundle": "^4.2"
     },
     "conflict": {
+        "contao/core": "*",
         "contao/manager-plugin": "<2.0 || >=3.0"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0",
-        "contao/easy-coding-standard": "^2.0",
-        "phpunit/phpunit": "^8.4",
-        "symfony/phpunit-bridge": "^4.4 || ^5.1"
+        "doctrine/doctrine-cache-bundle": "^1.3",
+        "friendsofphp/php-cs-fixer": "^2.12",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message-factory": "^1.0.2",
+        "phpunit/phpunit": "^5.7.26",
+        "symfony/phpunit-bridge": "^3.2"
     },
     "extra": {
-        "contao-manager-plugin": "lumturo\\ArticleConfigBundle\\ContaoManager\\Plugin"
+        "contao-manager-plugin": "lumturo-net\\ArticleConfigBundle\\ContaoManager\\Plugin"
     },
     "autoload": {
         "psr-4": {
