--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "symfony/phpunit-bridge": "^3.2"
     },
     "extra": {
-        "contao-manager-plugin": "lumturo-net\\ArticleConfigBundle\\ContaoManager\\Plugin"
+        "contao-manager-plugin": "lumturo\\ArticleConfigBundle\\ContaoManager\\Plugin"
     },
     "autoload": {
         "psr-4": {
