--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lumturo-net/article-config-bundle",
+    "name": "lumturo-net/article-properties-bundle",
     "type": "contao-bundle",
     "description": "Article config bundle for Contao4",
     "homepage": "https://contao.org",
@@ -22,7 +22,7 @@
         "contao/manager-plugin": "<2.0 || >=3.0"
     },
     "require-dev": {
-        "contao/manager-plugin": "^2.0",
+        "contao/manager-plugin": "^2.11",
         "doctrine/doctrine-cache-bundle": "^1.3",
         "friendsofphp/php-cs-fixer": "^2.12",
         "php-http/guzzle6-adapter": "^1.1",
@@ -31,21 +31,21 @@
         "symfony/phpunit-bridge": "^3.2"
     },
     "extra": {
-        "contao-manager-plugin": "lumturo\\ArticleConfigBundle\\ContaoManager\\Plugin"
+        "contao-manager-plugin": "LumturoNet\\ArticlePropertiesBundle\\ContaoManager\\Plugin"
     },
     "autoload": {
         "psr-4": {
-            "lumturo\\ArticleConfigBundle\\": "src/"
+            "LumturoNet\\ArticlePropertiesBundle\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "lumturo\\ArticleConfigBundle\\Tests\\": "tests/"
+            "LumturoNet\\ArticlePropertiesBundle\\Tests\\": "tests/"
         }
     },
     "support": {
-        "issues": "https://github.com/contao/skeleton-bundle/issues",
-        "source": "https://github.com/contao/skeleton-bundle"
+        "issues": "https://github.com/lumturo-net/contao-article-properties/issues",
+        "source": "https://github.com/lumturo-net/contao-article-properties"
     },
     "scripts": {
         "cs-fixer": [
