--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": "^8.0",
         "contao/core-bundle": "4.13.37",
-        "symfony/framework-bundle": "^4.2"
+        "symfony/framework-bundle": "^4.2 || ^5.4"
     },
     "conflict": {
         "contao/core": "*",
